Edit controllers and views, add Faker

--- a/src/AppBundle/Resources/views/Player/player.html.twig
+++ b/src/AppBundle/Resources/views/Player/player.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<h2>{{ player.name }}</h2>
-<div>{{ player.text }}</div>
+<h2>{{ name }}</h2>
+<div>{{ text }}</div>
 {% endblock %}
