--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -13,6 +13,6 @@
         {% block body %}
             <h1>EURO 2016</h1>
         {% endblock %}
-        <p>{{ "now"|date(null, "Europe/Kiev") }}</p>
+        {#<p>{{ "now"|date(null, "Europe/Kiev") }}</p>#}
     </body>
 </html>
