--- a/src/AppBundle/Resources/views/Coach/coach.html.twig
+++ b/src/AppBundle/Resources/views/Coach/coach.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<h1>{{ team.coach.name }}</h1>
-<p>{{ team.coach.text }}</p>
+<h1>{{ name }}</h1>
+<p>{{ text }}</p>
 {% endblock %}
