--- a/src/AppBundle/Resources/views/Country/country.html.twig
+++ b/src/AppBundle/Resources/views/Country/country.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<h2>{{ country.name }}</h2>
-<div>{{ country.text }}</div>
+<h2>{{ name }}</h2>
+<div>{{ text }}</div>
 {% endblock %}
