--- a/src/AppBundle/Resources/views/Player/player.html.twig
+++ b/src/AppBundle/Resources/views/Player/player.html.twig
@@ -1,6 +1,7 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
+   {#<div>{{ name }}</div>#}
 <h2>{{ name }}</h2>
 <div>{{ text }}</div>
 {% endblock %}
