--- a/web-src/less/app.less
+++ b/web-src/less/app.less
@@ -2,7 +2,7 @@
 
 @color: #223366;
 body{
-  background: #66dd66;
+  background: #b4b472;
   color: #131313;
   margin-left: 20px;
   margin-right: 20px;
