--- a/src/AppBundle/Resources/views/Coach/coach.html.twig
+++ b/src/AppBundle/Resources/views/Coach/coach.html.twig
@@ -1,6 +1,7 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<h1>{{ name }}</h1>
-<p>{{ text }}</p>
+    <h1>{{ country }} team </h1>
+    <h2>{{ name }}</h2>
+    <p>{{ text }}</p>
 {% endblock %}
