--- a/src/AppBundle/Resources/views/Player/player.html.twig
+++ b/src/AppBundle/Resources/views/Player/player.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
    {#<div>{{ name }}</div>#}
-<h2>Player name - {{ name }}</h2>
-<div>{{ info }}</div>
+    <h1>{{ country }} team</h1>
+    <h2>Player name - {{ name }}</h2>
+    <div>{{ info }}</div>
 {% endblock %}
