--- a/src/AppBundle/Resources/views/Generator/generator.html.twig
+++ b/src/AppBundle/Resources/views/Generator/generator.html.twig
@@ -1,5 +1,9 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<div>hello</div>
+    <h2>Generated:</h2>
+    <div>Countries: {{ country }}</div>
+    <div>Teams: {{ team }}</div>
+    <div>Coaches: {{ coach }}</div>
+    <div>Players: {{ player }}</div>
 {% endblock %}
