--- a/src/AppBundle/Resources/views/Coach/coach.html.twig
+++ b/src/AppBundle/Resources/views/Coach/coach.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-    <h1>{{ country }} team </h1>
-    <h2>{{ name }}</h2>
-    <p>{{ text }}</p>
+    <h1>{{ coach.country }} team </h1>
+    <h2>{{ coach.name }}</h2>
+    <p>{{ coach.info }}</p>
 {% endblock %}
