--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -2,11 +2,11 @@
 
 {% block body %}
     {{ parent() }}
-    <a href="{{ path('generator') }}">Generate information</a>
     {% for country in countries %}
         <div>
             <a href="{{ path('country', {'name': country.name}) }}"><img src="{{ country.flag }}"></a>
             <a href="{{ path('team', {'name': country.name}) }}">{{ country.name }}</a>
         </div>
     {% endfor %}
+    <h5><a href="{{ path('generator') }}">Add info to database</a></h5>
 {% endblock %}
