--- a/src/AppBundle/Resources/views/Team/team.html.twig
+++ b/src/AppBundle/Resources/views/Team/team.html.twig
@@ -4,7 +4,7 @@
     <h2>Players is {{ team.country }} team:</h2>
     <div>
         <ul>
-        {% for player in players %}
+        {% for player in team.players %}
            <li> <a href="{{ path('player', {'country': player.country, 'id': player.id}) }}"> {{ player.name }} </a> </li>
         {% endfor %}
         </ul>
@@ -12,7 +12,7 @@
      <h2>Coaches is {{ team.country }} team:</h2>
     <div>
         <ul>
-        {% for coach in coaches %}
+        {% for coach in team.coaches %}
             <li><a href="{{ path('coach',{'country':coach.country, 'id': coach.id }) }}"> {{ coach.name }} </a></li>
         {% endfor %}
         </ul>
