--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -8,4 +8,7 @@
             <a href="{{ path('team', {'id': country.team.id}) }}">{{ country.name }}</a>
         </div>
     {% endfor %}
+        <div>
+            <a href="{{ path('game') }}">Games</a>
+        </div>
 {% endblock %}
