--- a/src/AppBundle/Resources/views/Games/games.html.twig
+++ b/src/AppBundle/Resources/views/Games/games.html.twig
@@ -1,12 +1,19 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
+    <div class="count">
+    {{ pagination.getTotalItemCount }}
+    </div>
+
     <h1> Games </h1>
-    {% for game in games %}
+    {% for game in pagination %}
         {% for team in game.teams %}
            <p> {{ team.country.name }}</p>
         {% endfor %}
         {{ game.score }}
-
     {% endfor %}
+
+    <div class="navigation">
+    {{ knp_pagination_render(pagination) }}
+</div>
 {% endblock %}
