--- a/src/AppBundle/Resources/views/Country/country.html.twig
+++ b/src/AppBundle/Resources/views/Country/country.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body %}
-<h2>Info about:  <img src="{{ country.flag }}"> {{ country.name }}</h2>
+<h2>Info about: {{ country.name }}</h2>
 <div>{{ country.info }}</div>
 {% endblock %}
