edit less and fixture

--- a/web-src/less/app.less
+++ b/web-src/less/app.less
@@ -1,6 +1,7 @@
 @import "../../bower_components/bootstrap/less/bootstrap.less";
 
 @color: #223366;
+
 body{
   background: #b4b472;
   color: #131313;
@@ -9,10 +10,25 @@ body{
   font-size: large;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
 }
+
 h1{
   color:@color;
   letter-spacing: 2px;
 }
+
 h2{
   color: #2f2f2f;
+}
+
+form{
+  width: auto;
+  position: static;
+  margin: 0 0 20px 0;
+  background: #ff8000;
+  padding: 5px;
+  border: dashed 2px black;
+  float: left;
+  top: 40px;
+  left: 10px;
+  font-size: medium;
 }
